# KeySAM

./: CMakeLists.txt  LICENSE  config.json
src/: .gitignore  main.cpp
src/modelProcessors/: IModelProcessors.h  PoseModelProcessor.cpp  PoseModelProcessor.h  SAMModelProcessor.cpp  SAMModelProcessor.h
src/models/: IModel.cpp  IModel.h  PoseModel.cpp  PoseModel.h  SAMModel.cpp  SAMModel.h
src/pipelines/: HumanSegmenterPipeline.cpp  HumanSegmenterPipeline.h  IPipeline.cpp  IPipeline.h
src/utils/: CVUtils.cpp  CVUtils.h  ConfigManager.cpp  ConfigManager.h  MathUtils.h  TensorUtils.cpp  TensorUtils.h  VideoUtils.cpp  VideoUtils.h
